Chore: Single Player Chain Reaction Game